Add multi-view stacking classifier training script with Hu and PCA features
- Implemented a new script `train_stacking.py` for training a multi-view stacking classifier using Hu and PCA features.
- Added command-line arguments for input CSV files, output directory, binarization methods, and meta-classifier options.
- Included functionality for fast debugging with a limited dataset.
- Integrated model training using BernoulliNB and LogisticRegression, with support for XGBoost as a meta-classifier.
- Added performance metrics calculation and saving of predictions and metrics to CSV files.
- Implemented data loading, preprocessing, and feature binarization methods.

--- a/experiments/bernoulli/bin_thresholds.yaml
+++ b/experiments/bernoulli/bin_thresholds.yaml
@@ -1,45 +1,40 @@
-{
-  "meta": {
-    "method": "quantile",
-    "strategy": "global",
-    "quantile": 0.5,
-    "date": "2025-08-31T18:23:26",
-    "seed": 42,
-    "features": "both",
-    "zscore": false
-  },
-  "thresholds": {
-    "hu1_mean": 2.8516438007354736,
-    "hu2_mean": 5.959217071533203,
-    "hu3_mean": 8.893959999084473,
-    "hu4_mean": 9.130511283874512,
-    "hu5_mean": 17.31757926940918,
-    "hu6_mean": 11.65097713470459,
-    "hu7_mean": 0.0,
-    "hu1_std": 0.0469484068453311,
-    "hu2_std": 0.1479464173316955,
-    "hu3_std": 0.2352702468633651,
-    "hu4_std": 0.2806368172168731,
-    "hu5_std": 0.5559144616127014,
-    "hu6_std": 0.3700141310691833,
-    "hu7_std": 19.7442626953125,
-    "n_points": 1024.0,
-    "lambda1": 0.0795581340789794,
-    "lambda2": 0.0057566110044717,
-    "lambda3": 0.0036155811976641,
-    "r1": 0.8927239179611206,
-    "r2": 0.0659390836954116,
-    "r3": 0.0421019755303859,
-    "ratio12": 13.552153587341309,
-    "ratio23": 1.5640084743499756,
-    "trace": 0.0899751931428909,
-    "proj_hist_bin_0": 0.3095703125,
-    "proj_hist_bin_1": 0.2744140625,
-    "proj_hist_bin_2": 0.1806640625,
-    "proj_hist_bin_3": 0.0908203125,
-    "proj_hist_bin_4": 0.044921875,
-    "proj_hist_bin_5": 0.02734375,
-    "proj_hist_bin_6": 0.021484375,
-    "proj_hist_bin_7": 0.02734375
-  }
-}
+meta:
+  date: '2025-09-20T10:56:22'
+  features: both
+  method: median
+  quantile: 0.5
+  seed: 42
+  strategy: global
+  zscore: false
+thresholds:
+  hu1_mean: 2.8637911081314087
+  hu1_std: 0.0468914490193128
+  hu2_mean: 5.993681192398071
+  hu2_std: 0.16342583298683167
+  hu3_mean: 8.943781852722168
+  hu3_std: 0.2683066725730896
+  hu4_mean: 9.26114559173584
+  hu4_std: 0.3154810816049575
+  hu5_mean: 17.498594284057617
+  hu5_std: 0.6237952709197998
+  hu6_mean: 11.746077060699463
+  hu6_std: 0.4173295497894287
+  hu7_mean: 0.0
+  hu7_std: 19.849770545959473
+  lambda1: 0.0833264738321304
+  lambda2: 0.0063406890258192496
+  lambda3: 0.0039134602993726505
+  proj_hist_bin_0: 0.30029296875
+  proj_hist_bin_1: 0.28564453125
+  proj_hist_bin_2: 0.1826171875
+  proj_hist_bin_3: 0.0830078125
+  proj_hist_bin_4: 0.04052734375
+  proj_hist_bin_5: 0.0244140625
+  proj_hist_bin_6: 0.0205078125
+  proj_hist_bin_7: 0.0263671875
+  r1: 0.8882879614830017
+  r2: 0.06763821467757225
+  r3: 0.0433473419398069
+  ratio12: 13.220340251922607
+  ratio23: 1.6307925581932068
+  trace: 0.0954042449593544
